--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -57,7 +57,7 @@ jobs:
             - name: "👁️‍🗨️ Run Script"
               id: task_initialize_bash_run
               run: |
-                command = "${GITHUB_WORKSPACE}/update.sh"
+                command="${GITHUB_WORKSPACE}/update.sh"
                 input_EDIT_CHANGELOG=${{ inputs.EDIT_CHANGELOG }}
                 if [ "${input_EDIT_CHANGELOG}" = true ]; then
                   command+=" -s"
@@ -65,5 +65,5 @@ jobs:
                 
                 # make file runnable, might not be necessary
                 chmod +x "${GITHUB_WORKSPACE}/update.sh"
-                
-                eval "$command"
+                echo -e ${command}
+                eval "./$command"
