--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -15,7 +15,7 @@ on:
       EDIT_CHANGELOG:
         description:  "🗂️ Dont Edit Changelog"
         required:     true
-        default:      false
+        default:      true
         type:         boolean
 
 jobs:
