--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -157,6 +157,16 @@ jobs:
 
                 tree
 
+            - name: >-
+                📋 Upload Artifacts
+              id: task_test_artifacts_report
+              uses: actions/upload-artifact@v4
+              if: always()
+              with:
+                name: ".deb packages"
+                path: src/*.deb
+                retention-days: 30
+
             - name: "📦 Commit"
               id: task_build_commit
               uses: stefanzweifel/git-auto-commit-action@v5
