--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -157,6 +157,10 @@ jobs:
 
                 tree
 
+            # ---------------------------------------------------------------------------------------
+            #   Upload artifacts > .deb packages
+            # ---------------------------------------------------------------------------------------
+
             - name: >-
                 📋 Upload Artifacts
               id: task_test_artifacts_report
@@ -166,6 +170,10 @@ jobs:
                 name: ".deb packages"
                 path: src/*.deb
                 retention-days: 30
+
+            # ---------------------------------------------------------------------------------------
+            #   commit changes
+            # ---------------------------------------------------------------------------------------
 
             - name: "📦 Commit"
               id: task_build_commit
