--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -154,12 +154,13 @@ jobs:
 
                 echo -e "Sending command: ${command}"
                 # echo "EXECUTION_OUTPUT=$(eval ./$command)" >> "$GITHUB_ENV"
-                eval "./$command"
+                # eval "./$command"
 
                 echo "MULTI_LINES_TEXT_ENV_VAR<<EOF" >> $GITHUB_ENV
                   
                 # here we can place the command that will generate multi-line text
-                echo $MULTI_LINES_TEXT >> $GITHUB_ENV 
+                # echo $MULTI_LINES_TEXT >> $GITHUB_ENV 
+                echo "MULTI_LINES_TEXT=$(eval ./$command)" >> "$GITHUB_ENV"
                   
                 echo "EOF" >> $GITHUB_ENV
 
