--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -160,17 +160,14 @@ jobs:
                   
                 # here we can place the command that will generate multi-line text
                 # echo $MULTI_LINES_TEXT >> $GITHUB_ENV 
-                echo "MULTI_LINES_TEXT=$(eval ./$command)" >> "$GITHUB_ENV"
+                echo "BUILD_OUTPUT=$(eval ./$command)" >> "$GITHUB_ENV"
                   
                 echo "EOF" >> $GITHUB_ENV
 
-            - name: parse the output
+            - name: "Version"
               shell: bash
               run: |
-                echo -e "${{ env.MULTI_LINES_TEXT_ENV_VAR }}"
-                echo -e "${{ env.MULTI_LINES_TEXT }}"
-                echo -e ${{ steps.task_build_run.outputs.MULTI_LINES_TEXT_ENV_VAR }}
-                echo -e ${{ steps.task_build_run.outputs.MULTI_LINES_TEXT }}
+                echo "${{ env.BUILD_OUTPUT }}" | tail -n1
 
             # ---------------------------------------------------------------------------------------
             #   Upload artifacts > .deb packages
