--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -164,9 +164,11 @@ jobs:
                   
                 echo "EOF" >> $GITHUB_ENV
 
-            - name: parse the output
+            - name: "Output"
               shell: bash
               run: |
+                build_output="${{ env.MULTI_LINES_TEXT }}"
+                echo "BUILD_OUTPUT=${build_output}" >> $GITHUB_ENV
                 echo -e "${{ env.MULTI_LINES_TEXT }}"
                 echo -e ${{ steps.task_build_run.outputs.MULTI_LINES_TEXT }}
 
