--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -167,12 +167,22 @@ jobs:
             - name: parse the outputs 1
               shell: bash
               run: |
+                sha256="$(echo "${{ env.MULTI_LINES_TEXT }}" | tail -n1)"
+                echo "SHA256SUM=${sha256}" >> $GITHUB_ENV
+
+
+
                 echo -e "${{ env.MULTI_LINES_TEXT }}"
 
             - name: parse the outputs 22
               shell: bash
               run: |
                 echo -e ${{ steps.task_build_run.outputs.MULTI_LINES_TEXT }}
+
+            - name: parse the outputs 3
+              shell: bash
+              run: |
+                echo -e ${{ env.SHA256SUM }}
 
             # ---------------------------------------------------------------------------------------
             #   Upload artifacts > .deb packages
