--- a/.github/workflows/deb_build.yml
+++ b/.github/workflows/deb_build.yml
@@ -156,7 +156,7 @@ jobs:
                 # #
 
                 echo -e "Sending command: ${command}"
-                echo "VERSION_TEXT<<EOF" >> $GITHUB_ENV
+                echo "VERSION_PACKAGE<<EOF" >> $GITHUB_ENV
                 echo "$(eval ./$command | tail -n1)" >> "$GITHUB_ENV"
                 echo "EOF" >> $GITHUB_ENV
 
@@ -173,7 +173,6 @@ jobs:
             - name: "Version: Package"
               shell: bash
               run: |
-                echo -e "${{ env.VERSION_TEXT }}"
                 echo -e "${{ env.VERSION_PACKAGE }}"
                 echo -e "${{ steps.task_build_run.outputs.VERSION_PACKAGE }}"
 
@@ -182,13 +181,13 @@ jobs:
             # ---------------------------------------------------------------------------------------
 
             - name: >-
-                📋 Upload Artifacts › opengist${{ env.VERSION_TEXT }}-linux-386.deb
+                📋 Upload Artifacts › opengist${{ env.VERSION_PACKAGE }}-linux-386.deb
               id: task_build_artifact_i386
               uses: actions/upload-artifact@v4
               if: always()
               with:
                 name: "opengist${{ env.VERSION_PACKAGE }}-linux-386.deb"
-                path: src/opengist${{ env.VERSION_PACKAGE }}-linux-386*.deb
+                path: opengist${{ env.VERSION_PACKAGE }}-linux-386*.deb
                 retention-days: 30
 
             - name: >-
@@ -198,7 +197,7 @@ jobs:
               if: always()
               with:
                 name: "opengist${{ env.VERSION_PACKAGE }}-linux-amd64.deb"
-                path: src/opengist${{ env.VERSION_PACKAGE }}-linux-amd64*.deb
+                path: opengist${{ env.VERSION_PACKAGE }}-linux-amd64*.deb
                 retention-days: 30
 
             - name: >-
@@ -208,7 +207,7 @@ jobs:
               if: always()
               with:
                 name: "opengist${{ env.VERSION_PACKAGE }}-linux-arm64.deb"
-                path: src/opengist${{ env.VERSION_PACKAGE }}-linux-arm64*.deb
+                path: opengist${{ env.VERSION_PACKAGE }}-linux-arm64*.deb
                 retention-days: 30
 
             # ---------------------------------------------------------------------------------------
